--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
+    "randomstring": "^1.2.1",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0"
   },
