--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pg": "^8.7.1",
     "randomstring": "^1.2.1",
     "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
