--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "randomstring": "^1.2.1",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
